# abeams-engine

./: .dockerignore  .gitignore  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PRODUCTION_READINESS.md  README.md  build-debug.sh  cmake_install.cmake  config.json  engine  main.cpp  vcpkg.json
.VSCodeCounter/2025-07-18_19-54-57/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.cmake/api/v1/reply/: cache-v2-036328e43897d650cda2.json  cmakeFiles-v1-13ceb01401d8e6b393a6.json  codemodel-v2-973e61f29f6b2aff5441.json  index-2025-07-08T15-48-25-0558.json  target-engine-Debug-52234e21a28f2e4ef6b8.json
.github/workflows/: build-mlc.yml  cmake-clang-multiplatform.yml  cmake-multi-platform.yml
cli/: CMakeLists.txt  cli.cpp  cli.h
core/: CMakeLists.txt  initialize.h  main.cpp
core/sim/: CMakeLists.txt  sim.cpp  sim.h
core/thread/: CMakeLists.txt
core/thread/threadpool/: threadpool.cpp
docs/: COMPILING.md  CONTRIBUTING.md  SABCEMM_DE.md  SOURCES.md
documentation/: COMPILING.md  SABCEMM_DE.md
log/: stor.txt
net/: CMakeLists.txt
net/websockets/: wsHandler.cpp  wsHandler.h  wsServer.cpp  wsServer.h
src/: config.json  initalize.h  initialize.h  main.cpp  mconf.json
src/cli/: cli.cpp  cli.h
src/com/: estbComFD.cpp  estbComFD.h  estbComQT.cpp  estbComQT.h  httpReqResHandler.cpp  httpReqResHandler.h  wsReqResHandler.cpp  wsReqResHandler.h  wsServer.cpp
src/config/: mconf.json
src/datapull/: pullDataFrmSpdr.cpp  pullDataFrmSpdr.h  pullDataSpdr.cpp  pullDataSpdr.h  pullDataUsr.cpp  pullDataUsr.h  pullDataUsrInput.cpp  pullDataUsrInput.h
src/header/: config.h  config.hpp  parseConfig.h
src/io/: parseConfig.cpp  parseConfig.h
src/io/thread/task/: taskHandler.cpp  taskHandler.h
src/io/thread/threadpool/: threadpool.cpp  threadpool.h
src/io/util/: parseConfig.cpp  parseConfig.h
src/io/util/logsys/: logToFile.cpp  logToFile.h  logsys.cpp  logsys.h
src/thread/threadpool/: threadpool.cpp  threadpool.h
util/: CMakeLists.txt  parseConfig.cpp
util/abeams_deps/: config.hpp
util/logsys/: logToFile.cpp  logToFile.h  logsys.h
